changed / to index.html

--- a/page-manager.html
+++ b/page-manager.html
@@ -46,7 +46,7 @@
                 <hr>
                 <div class="homepageModule-drafts">
                     <ul>
-                        <li><a href="/"><span class="lodur-icon-add"></span></a></li>
+                        <li><a href="index.html"><span class="lodur-icon-add"></span></a></li>
                         <li>
                             <div class="homepageModule-draft-thumb">
                                 <img src="assets/image/draft-thumb.jpg" alt="">
