--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 <h1>Homepage erstellen</h1>
                             </div>
                             <div>
-                                <input class="homepageModule-companyName float-left mr-2" placeholder="Organisationsname" type="text"><a class="homepageModule-btn btn btn-primary" href="select-template.html">Weiter</a>
+                                <input class="homepageModule-companyName float-left mr-2" placeholder="Organisationsname" type="text"><a class="homepageModule-btn btn btn-primary lodur-blue--button" href="select-template.html">Weiter</a>
                             </div>
                             
                         </div>
