--- a/select-template.html
+++ b/select-template.html
@@ -17,7 +17,7 @@
             <div class="col-lg-12">
                 <div class="row">
                     <div class="col-lg-12">
-                        <a href="page-manager.html" class="homepageModule-backNav">
+                        <a href="index.html" class="homepageModule-backNav">
                             <span class="lodur-icon-arrow-thin-left float-left mr-2"></span>
                         </a>
                     </div>
@@ -41,8 +41,11 @@
                                         <div class="homepageModule-draft-name">Template 1</div>
                                     </div>
                                     <div class="homepageModule-draft--overlay">
+                                        
                                         <button data-toggle="modal" data-target="#exampleModalCenter">Preview</button>
-                                        <button>Select</button>
+                                        <form action="template-edit-1.html">    
+                                            <button>Select</button>
+                                        </form>    
                                     </div>
                                 </li>
                                 <li>
@@ -181,7 +184,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Select and Edit</button>
+                <button type="button" class="btn btn-primary lodur-blue--button">Select and Edit</button>
                 </div>
             </div>
         </div>
