--- a/template-edit-1.html
+++ b/template-edit-1.html
@@ -18,7 +18,7 @@
                 <div class="hpm-edit--panel">
                     <div class="hpm-colorSelection">
                         <h2>Choose primary color</h2>
-                        <ul>
+                        <ul class="mt-4">
                             <li class="selected--color"><a href="#"><span class="red"></span></a></li>
                             <li><a href="#"><span class="green"></span></a></li>
                             <li><a href="#"><span class="grey"></span></a></li>
@@ -28,7 +28,8 @@
                     </div>
                     <div class="hpm-uploadLogo">
                         <h2>Upload a logo</h2>
-                        <div class="hpm--uploader">
+                        <p class="hpm--subHeadline">Don't have one? Just click continue...</p>
+                        <div class="hpm--uploader mt-4">
                             <div><b>Click to upload your image</b></div>
                             <div>(or drag and drop)</div>
                         </div>
@@ -42,12 +43,14 @@
                         </div>
                     </div>
                     <div class="hpm-template--buttons">
-                        <div class="hpm--statusBar"></div>
-                        <div>
-                            <div class="hpm-statusInfo"></div>
+                        <div class="hpm--statusBar">
+                            <div class="hpm--statusBar--complete"></div>
+                        </div>
+                        <div class="hpm-status--buttons">
+                            <div class="hpm-statusInfo">You're on your way...</div>
                             <div>
-                                <button><span class="lodur-icon-arrow-thin-left"></span></button>
-                                <button>Continue</button>
+                                <a href="select-template.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a>
+                                <a href="template-edit-2.html" class="btn btn-primary lodur-blue--button">Continue</a>
                             </div>
                         </div>
                     </div>
@@ -75,30 +78,12 @@
 
     <script>
 
-    $("#dateiSearch").focusin(function() {
-        $(".datei-folderActions").hide();
-    }).focusout(function () {
-        $(".datei-folderActions").fadeIn(400);
-    });
-    
-
-    $("#dateiSearch").focusin(function() {
-        $("#datei-searchClose").show();
-    }).focusout(function () {
-        $("#datei-searchClose").hide();
+    $(".hpm-colorSelection ul li").click(function () { 
+        if($(this).removeClass("selected--color"))
+            $(".hpm-colorSelection ul li").removeClass("selected--color");               
+        $(this).addClass("selected--color");        
     });
 
-    
-
-
-    jQuery("#show-folderOptions").on("click", function() {
-        jQuery(".datei-folder--option").fadeToggle( "fast");
-    });
-
-    // $('#datei-folderOptions-trigger').on('click', function(e) {
-    //   $('.datei-file--container').toggleClass("move-down-class"); //you can list several class names 
-    //   e.preventDefault();
-    // });
 
 
     </script>
