--- a/template-edit-1.html
+++ b/template-edit-1.html
@@ -14,49 +14,49 @@
 
     <div class="container homepageModule-wrapper">
         <div class="row">    
-            <div class="col-12 col-lg-3">
+            <div class="col-lg-12">
                 <div class="hpm-edit--panel">
-                    <div class="hpm-colorSelection">
-                        <h2>Choose primary color</h2>
-                        <ul class="mt-4">
-                            <li class="selected--color"><a href="#"><span class="red"></span></a></li>
-                            <li><a href="#"><span class="green"></span></a></li>
-                            <li><a href="#"><span class="grey"></span></a></li>
-                            <li><a href="#"><span class="blue"></span></a></li>
-                            <li><a href="#"><span class="yellow"></span></a></li>
-                        </ul>
-                    </div>
-                    <div class="hpm-uploadLogo">
-                        <h2>Upload a logo</h2>
-                        <p class="hpm--subHeadline">Don't have one? Just click continue...</p>
-                        <div class="hpm--uploader mt-4">
-                            <div><b>Click to upload your image</b></div>
-                            <div>(or drag and drop)</div>
+                    <div class="hpm-sidebar--scroller">
+                        <div class="hpm-colorSelection">
+                            <h2>Choose primary color</h2>
+                            <ul class="mt-4">
+                                <li class="selected--color"><a href="#"><span class="red"></span></a></li>
+                                <li><a href="#"><span class="green"></span></a></li>
+                                <li><a href="#"><span class="grey"></span></a></li>
+                                <li><a href="#"><span class="blue"></span></a></li>
+                                <li><a href="#"><span class="yellow"></span></a></li>
+                            </ul>
                         </div>
-                        <div class="hpm--Logo">
-                            <div>
-                                <img src="assets/image/demo-logo.png" alt="">
+                        <div class="hpm-uploadLogo">
+                            <h2>Upload a logo</h2>
+                            <p class="hpm--subHeadline">Don't have one? Just click continue...</p>
+                            <div class="hpm--uploader mt-4">
+                                <div><b>Click to upload your image</b></div>
+                                <div>(or drag and drop)</div>
                             </div>
-                            <div class="mt-4">
-                                <a href="#"><span class="lodur-icon-bin"></span></a>
+                            <div class="hpm--Logo">
+                                <div>
+                                    <img src="assets/image/demo-logo.png" alt="">
+                                </div>
+                                <div class="mt-4">
+                                    <a href="#"><span class="lodur-icon-bin"></span></a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="hpm-template--buttons">
-                        <div class="hpm--statusBar">
-                            <div class="hpm--statusBar--complete"></div>
-                        </div>
-                        <div class="hpm-status--buttons">
-                            <div class="hpm-statusInfo">You're on your way...</div>
-                            <div>
-                                <a href="select-template.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a>
-                                <a href="template-edit-2.html" class="btn btn-primary lodur-blue--button">Continue</a>
+                        <div class="hpm-template--buttons">
+                            <div class="hpm--statusBar">
+                                <div class="hpm--statusBar--complete"></div>
+                            </div>
+                            <div class="hpm-status--buttons">
+                                <div class="hpm-statusInfo">You're on your way...</div>
+                                <div>
+                                    <a href="select-template.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a>
+                                    <a href="template-edit-2.html" class="btn btn-primary lodur-blue--button">Continue</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 col-lg-9">
                 <div class="hpm-templatePreview">
                     <img src="assets/image/template-1.png" alt="">
                 </div>
