page editing panel

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container homepageModule-wrapper">
+    <div class="container-fluid homepageModule-wrapper">
         <div class="row">    
             <div class="col-12 col-lg-3"><img class="d-none d-lg-block" src="assets/image/create-site.svg" alt="Create New Site"></div>
             <div class="col-12 col-lg-9">
