--- a/template-edit-5.html
+++ b/template-edit-5.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container homepageModule-wrapper">
+    <div class="container-fluid homepageModule-wrapper">
         <div class="row">    
             <div class="col-12 col-lg-12">
                 <div class="hpm-edit--panel">
@@ -128,7 +128,7 @@
                                 <div class="hpm-statusInfo">Complete!</div>
                                 <div>
                                     <a href="template-edit-4.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a>
-                                    <a href="template-edit-6.html" class="btn btn-primary lodur-blue--button">Continue</a>
+                                    <a href="editing-panel.html" class="btn btn-primary lodur-blue--button">Continue</a>
                                 </div>
                             </div>
                         </div>
