--- a/page-manager.html
+++ b/page-manager.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container homepageModule-wrapper mt-5">
+    <div class="container-fluid homepageModule-wrapper mt-5">
         <div class="row">    
             
             <div class="col-lg-12 mb-5">
