--- a/template-edit-1.html
+++ b/template-edit-1.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container homepageModule-wrapper">
+    <div class="container-fluid homepageModule-wrapper">
         <div class="row">    
             <div class="col-lg-12">
                 <div class="hpm-edit--panel">
