--- a/gui-blog.html
+++ b/gui-blog.html
@@ -152,7 +152,7 @@
                 </div>
             
                 <div class="hpm-templatePreview">
-                    <img src="assets/image/template-1.png" alt="">
+                    <img src="assets/image/misc.png" alt="">
                 </div>
             </div>
         </div>
