Signed-off-by: devtalha86 <devtalha86@gmail.com>

--- a/template-edit-3.html
+++ b/template-edit-3.html
@@ -28,39 +28,41 @@
                                 <li><a href="#"><img class="img-fluid" src="assets/image/nav-right.svg" alt=""></a></li>
                             </ul>
 
-                            <h2 class="mt-5">Lets add menu/pages</h2>
+                            
+                        </div>
+
+                        <div class="hpm-menuSetting">
+                            <h2>Lets add menu/pages</h2>
                             <p class="hpm--subHeadline">Drag menu to change order or add a sub menu</p>
 
-                            <div style="width: 100%;" class="mb-3 float-left">
+                            <!-- <div style="width: 100%;" class="mb-3 float-left">
                                 <form class="lodurMobile-form" action="">
                                     <input style="width: 80%;" class="float-left" type="text" placeholder="e.g Contact Us">
                                     <button class="float-right btn btn-primary">Add</button>
                                 </form>
-                            </div>
-
-                            <div class="hpm-menuSetting">
-                                <ul>
-                                    <li><div class="hpm-Menu"><a href="#">Home</a><span class="lodur-icon-no"></span></div></li>
-                                    <li>
-                                        <div class="hpm-Menu"><a href="#">About Us</a><span class="lodur-icon-no"></span></div>
-                                        <ul class="hpm-subMenu">
-                                            <li><div class="hpm-Menu"><a href="#">Übungen</a><span class="lodur-icon-no"></span></div></li>
-                                            <li><div class="hpm-Menu"><a href="#">Einsätze</a><span class="lodur-icon-no"></span></div></li>
-                                            <li><div class="hpm-Menu"><a href="#">Fahrzeuge</a><span class="lodur-icon-no"></span></div></li>
-                                        </ul>
-                                    </li>
-                                    <li><div class="hpm-Menu"><a href="#">Gallery</a><span class="lodur-icon-no"></span></div></li>
-                                    <li>
-                                        <div class="hpm-Menu"><a href="#">Our Team</a><span class="lodur-icon-no"></span></div>
-                                        <ul class="hpm-subMenu">
-                                            <li><div class="hpm-Menu"><a href="#">Organigramm</a><span class="lodur-icon-no"></span></div></li>
-                                            <li><div class="hpm-Menu"><a href="#">Mannschaft</a><span class="lodur-icon-no"></span></div></li>
-                                        </ul>
-                                    </li>
-                                    <li><div class="hpm-Menu"><a href="#">Contact</a><span class="lodur-icon-no"></span></div></li>
-                                </ul>
-                            </div>
+                            </div> -->
+                            <ul>
+                                <li><div class="hpm-Menu"><a href="#">Home</a><span class="lodur-icon-no"></span></div></li>
+                                <li>
+                                    <div class="hpm-Menu"><a href="#">About Us</a><span class="lodur-icon-no"></span></div>
+                                    <ul class="hpm-subMenu">
+                                        <li><div class="hpm-Menu"><a href="#">Übungen</a><span class="lodur-icon-no"></span></div></li>
+                                        <li><div class="hpm-Menu"><a href="#">Einsätze</a><span class="lodur-icon-no"></span></div></li>
+                                        <li><div class="hpm-Menu"><a href="#">Fahrzeuge</a><span class="lodur-icon-no"></span></div></li>
+                                    </ul>
+                                </li>
+                                <li><div class="hpm-Menu"><a href="#">Gallery</a><span class="lodur-icon-no"></span></div></li>
+                                <li>
+                                    <div class="hpm-Menu"><a href="#">Our Team</a><span class="lodur-icon-no"></span></div>
+                                    <ul class="hpm-subMenu">
+                                        <li><div class="hpm-Menu"><a href="#">Organigramm</a><span class="lodur-icon-no"></span></div></li>
+                                        <li><div class="hpm-Menu"><a href="#">Mannschaft</a><span class="lodur-icon-no"></span></div></li>
+                                    </ul>
+                                </li>
+                                <li><div class="hpm-Menu"><a href="#">Contact</a><span class="lodur-icon-no"></span></div></li>
+                            </ul>
                         </div>
+
                     </div>
                     
                     <div class="hpm-template--buttons">
@@ -71,7 +73,7 @@
                             <div class="hpm-statusInfo">60% done</div>
                             <div>
                                 <a href="template-edit-2.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a>
-                                <a href="template-edit-4.html" class="btn btn-primary lodur-blue--button">Continue</a>
+                                <a href="template-edit-5.html" class="btn btn-primary lodur-blue--button">Continue</a>
                             </div>
                         </div>
                     </div>
