--- a/template-edit-5.html
+++ b/template-edit-5.html
@@ -127,8 +127,8 @@
                             <div class="hpm-status--buttons">
                                 <div class="hpm-statusInfo">Complete!</div>
                                 <div>
-                                    <a href="template-edit-4.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a>
-                                    <a href="editing-panel.html" class="btn btn-primary lodur-blue--button">Continue</a>
+                                    <a href="template-edit-3.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a>
+                                    <a href="gui-home.html" class="btn btn-primary lodur-blue--button">Continue</a>
                                 </div>
                             </div>
                         </div>
