Signed-off-by: moynul <bappyist@gmail.com>

--- a/gui-blog.html
+++ b/gui-blog.html
@@ -176,7 +176,7 @@
                 </div>
             
                 <div class="hpm-templatePreview">
-                    <img src="assets/image/misc.png" alt="">
+                    <img src="assets/image/d-blog.jpg" alt="">
                 </div>
             </div>
         </div>
