--- a/gui-home.html
+++ b/gui-home.html
@@ -206,7 +206,7 @@
                 </div>
             
                 <div class="hpm-templatePreview">
-                    <img src="assets/image/misc.png" alt="">
+                    <img src="assets/image/d-home.jpg" alt="">
                 </div>
             </div>
         </div>
