--- a/gui-ubungen.html
+++ b/gui-ubungen.html
@@ -112,7 +112,7 @@
                 </div>
             
                 <div class="hpm-templatePreview">
-                    <img src="assets/image/demo-ubungen.png" alt="">
+                    <img src="assets/image/d-ubungen.jpg" alt="">
                 </div>
             </div>
         </div>
