--- a/template-edit-1.html
+++ b/template-edit-1.html
@@ -71,14 +71,14 @@
                                 <div class="hpm-statusInfo">You're on your way...</div>
                                 <div>
                                     <!-- <a href="select-template.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a> -->
-                                    <a href="template-edit-2.html" class="btn btn-primary lodur-blue--button">Continue</a>
+                                    <a href="template-edit-3.html" class="btn btn-primary lodur-blue--button">Continue</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="hpm-templatePreview">
-                    <img src="assets/image/template-1.png" alt="">
+                    <img src="assets/image/d-home.jpg" alt="">
                 </div>
             </div>
         </div>
