--- a/template-edit-5.html
+++ b/template-edit-5.html
@@ -136,7 +136,7 @@
                 </div>
             
                 <div class="hpm-templatePreview">
-                    <img src="assets/image/template-1.png" alt="">
+                    <img src="assets/image/d-home.jpg" alt="">
                 </div>
             </div>
         </div>
