--- a/gui-einsatz.html
+++ b/gui-einsatz.html
@@ -49,8 +49,8 @@
                                         <select onchange="window.open(this.options[this.selectedIndex].value, '_self')">
                                             <option value="gui-home.html">Home</option>
                                             <optgroup label="About Us">
-                                                <option value="gui-ubungen.html" selected>Übungen</option>
-                                                <option value="gui-einsatz.html">Einsätze</option>
+                                                <option value="gui-ubungen.html">Übungen</option>
+                                                <option value="gui-einsatz.html" selected>Einsätze</option>
                                                 <option value="gui-fahrzeuge.html">Fahrzeuge</option>
                                             </optgroup>
                                             <option value="gui-gallery.html">Gallery</option>
@@ -92,7 +92,7 @@
                             </div>
 
                             <div class="hpm-ubungen--details">
-                                <h2>Übungen details</h2>
+                                <h2>Einsätze details</h2>
                                 <p class="hpm--subHeadline">Select an event to add/change details</p>
                                 
                                 <div class="row">
