BLOG PDF COLUMN NAME

--- a/gui-blog.html
+++ b/gui-blog.html
@@ -207,8 +207,15 @@
                         <input style="margin-top: 0.6rem;" type="file" id="pdf-upload"/>
                     </div>
                 </div>
-                                        
+                
                 <div class="row mt-4">
+                    <div class="col-lg-12">
+                        <label for="">Section Name</label>
+                        <input class="" type="text">
+                    </div>
+                </div>
+
+                <div class="row">
                     <div class="col-lg-12">
                         <label for="">PDF Title</label>
                         <input class="" type="text">
