ADD PDF SECTION FOR UBUNGEN AND EINSATZ

--- a/gui-blog.html
+++ b/gui-blog.html
@@ -48,7 +48,7 @@
                                 
                             <div class="hpm-tabs">
                                 <ul class="nav mt-4">
-                                    <li class="active selected"><a href="#1a" data-toggle="tab">News</a></li>
+                                    <li class="selected"><a href="#1a" data-toggle="tab">News</a></li>
                                     <li><a href="#2a" data-toggle="tab">PDF</a></li>
                                 </ul>
                             </div>
