--- a/template-edit-1.html
+++ b/template-edit-1.html
@@ -76,7 +76,7 @@
                                 <div class="hpm-statusInfo">You're on your way...</div>
                                 <div>
                                     <!-- <a href="select-template.html" class="btn btn-primary lodur-blue--button pt-1 pb-0"><span class="lodur-icon-arrow-thin-left"></span></a> -->
-                                    <a href="template-edit-5.html" class="btn btn-primary lodur-blue--button">Continue</a>
+                                    <a href="gui-home.html" class="btn btn-primary lodur-blue--button">Continue</a>
                                 </div>
                             </div>
                         </div>
